# cifar10-gradient-inversion

./: .gitignore  .pre-commit-config.yaml  README.md  clip_accuracy_summary.csv  environment.yaml  pyproject.toml
analysis_results/: successes_by_batch_idx.json  successes_by_batch_size.json  summary_successes_by_batch_idx.csv  summary_successes_by_batch_size.csv
analysis_results_granular/: granular_successes_batch_idx_by_batch_size.json  granular_successes_by_batch_idx.json  granular_successes_by_batch_size.json  summary_granular_successes_batch_idx_by_batch_size.csv  summary_granular_successes_by_batch_idx.csv  summary_granular_successes_by_batch_size.csv
configs/: classify_clip.yaml  config.yaml  config_old.yaml  sweep.yaml
configs/experiment/: default.yaml
configs/paths/: default.yaml
configs/sweeps/: multirun.yaml
data_output/json/: full_plot_data.json
outputs/2025-07-26/11-29-13/.hydra/: hydra.yaml
scripts/: combine_csv.py  run.py  run_classify_clip.py  run_full_pipeline.py  run_full_pipeline2.py  run_full_sweep.sh  run_pipeline_for_pair.py  run_reconstruction.py  run_train_capture.py  v2.py
src/: data.py  evaluation.py  inversion.py  model.py  pyproject.toml  train_capture.py  utils.py
wandb/: latest-run
wandb/run-20250726_120823-frvxf1h0/: run-frvxf1h0.wandb
wandb/run-20250726_120823-frvxf1h0/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20250726_121226-mr2basvj/: run-mr2basvj.wandb
wandb/run-20250726_121226-mr2basvj/files/: config.yaml  wandb-metadata.json  wandb-summary.json
(+20 files in other folders)
