[project]
name = "cifar10-gradient-inversion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "scikit-image>=0.25.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.2",
    "wandb>=0.21.1",
]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
